--- a/rsync_files_with_tqdm/dockerfile
+++ b/rsync_files_with_tqdm/dockerfile
@@ -1,6 +1,8 @@
 FROM python:3.12.1
 
-WORKDIR /workdir/
+WORKDIR /workdir
+
+RUN apt-get update && apt-get install -y rsync
 
 COPY requirements.txt /tmp/pip-tmp/
 RUN pip install -r /tmp/pip-tmp/requirements.txt
